--- a/.gitignore
+++ b/.gitignore
@@ -694,3 +694,111 @@ therich_app/windows/runner/utils.cpp
 therich_app/windows/runner/utils.h
 therich_app/windows/runner/win32_window.cpp
 therich_app/windows/runner/win32_window.h
+navigation_flutter_demo/windows/runner/win32_window.h
+navigation_flutter_demo/windows/runner/win32_window.cpp
+navigation_flutter_demo/windows/runner/utils.h
+navigation_flutter_demo/windows/runner/utils.cpp
+navigation_flutter_demo/windows/runner/Runner.rc
+navigation_flutter_demo/windows/runner/runner.exe.manifest
+navigation_flutter_demo/windows/runner/resources/app_icon.ico
+navigation_flutter_demo/windows/runner/resource.h
+navigation_flutter_demo/windows/runner/main.cpp
+navigation_flutter_demo/windows/runner/flutter_window.h
+navigation_flutter_demo/windows/runner/flutter_window.cpp
+navigation_flutter_demo/windows/runner/CMakeLists.txt
+navigation_flutter_demo/windows/flutter/generated_plugins.cmake
+navigation_flutter_demo/windows/flutter/generated_plugin_registrant.h
+navigation_flutter_demo/windows/flutter/generated_plugin_registrant.cc
+navigation_flutter_demo/windows/flutter/CMakeLists.txt
+navigation_flutter_demo/windows/CMakeLists.txt
+navigation_flutter_demo/web/manifest.json
+navigation_flutter_demo/web/index.html
+navigation_flutter_demo/web/icons/Icon-maskable-512.png
+navigation_flutter_demo/web/icons/Icon-maskable-192.png
+navigation_flutter_demo/web/icons/Icon-512.png
+navigation_flutter_demo/web/icons/Icon-192.png
+navigation_flutter_demo/web/favicon.png
+navigation_flutter_demo/test/widget_test.dart
+navigation_flutter_demo/README.md
+navigation_flutter_demo/pubspec.yaml
+navigation_flutter_demo/macos/Runner/Release.entitlements
+navigation_flutter_demo/macos/Runner/MainFlutterWindow.swift
+navigation_flutter_demo/macos/Runner/Info.plist
+navigation_flutter_demo/macos/Runner/DebugProfile.entitlements
+navigation_flutter_demo/macos/Runner/Configs/Warnings.xcconfig
+navigation_flutter_demo/macos/Runner/Configs/Release.xcconfig
+navigation_flutter_demo/macos/Runner/Configs/Debug.xcconfig
+navigation_flutter_demo/macos/Runner/Configs/AppInfo.xcconfig
+navigation_flutter_demo/macos/Runner/Base.lproj/MainMenu.xib
+navigation_flutter_demo/macos/Runner/Assets.xcassets/AppIcon.appiconset/Contents.json
+navigation_flutter_demo/macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_64.png
+navigation_flutter_demo/macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_512.png
+navigation_flutter_demo/macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_32.png
+navigation_flutter_demo/macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_256.png
+navigation_flutter_demo/macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_16.png
+navigation_flutter_demo/macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_128.png
+navigation_flutter_demo/macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_1024.png
+navigation_flutter_demo/macos/Runner/AppDelegate.swift
+navigation_flutter_demo/macos/Runner.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+navigation_flutter_demo/macos/Runner.xcworkspace/contents.xcworkspacedata
+navigation_flutter_demo/macos/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
+navigation_flutter_demo/macos/Runner.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+navigation_flutter_demo/macos/Runner.xcodeproj/project.pbxproj
+navigation_flutter_demo/macos/Flutter/GeneratedPluginRegistrant.swift
+navigation_flutter_demo/macos/Flutter/Flutter-Release.xcconfig
+navigation_flutter_demo/macos/Flutter/Flutter-Debug.xcconfig
+navigation_flutter_demo/linux/my_application.h
+navigation_flutter_demo/linux/my_application.cc
+navigation_flutter_demo/linux/main.cc
+navigation_flutter_demo/linux/flutter/generated_plugins.cmake
+navigation_flutter_demo/linux/flutter/generated_plugin_registrant.h
+navigation_flutter_demo/linux/flutter/generated_plugin_registrant.cc
+navigation_flutter_demo/linux/flutter/CMakeLists.txt
+navigation_flutter_demo/linux/CMakeLists.txt
+navigation_flutter_demo/ios/Runner/Runner-Bridging-Header.h
+navigation_flutter_demo/ios/Runner/Info.plist
+navigation_flutter_demo/ios/Runner/Base.lproj/Main.storyboard
+navigation_flutter_demo/ios/Runner/Base.lproj/LaunchScreen.storyboard
+navigation_flutter_demo/ios/Runner/Assets.xcassets/LaunchImage.imageset/README.md
+navigation_flutter_demo/ios/Runner/Assets.xcassets/LaunchImage.imageset/LaunchImage@3x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/LaunchImage.imageset/LaunchImage@2x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/LaunchImage.imageset/LaunchImage.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/LaunchImage.imageset/Contents.json
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-83.5x83.5@2x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-76x76@2x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-76x76@1x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-60x60@3x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-60x60@2x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-40x40@3x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-40x40@2x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-40x40@1x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-29x29@3x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-29x29@2x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-29x29@1x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-20x20@3x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-20x20@2x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-20x20@1x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-1024x1024@1x.png
+navigation_flutter_demo/ios/Runner/Assets.xcassets/AppIcon.appiconset/Contents.json
+navigation_flutter_demo/ios/Runner/AppDelegate.swift
+navigation_flutter_demo/ios/Runner.xcworkspace/xcshareddata/WorkspaceSettings.xcsettings
+navigation_flutter_demo/ios/Runner.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+navigation_flutter_demo/ios/Runner.xcworkspace/contents.xcworkspacedata
+navigation_flutter_demo/ios/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
+navigation_flutter_demo/ios/Runner.xcodeproj/project.xcworkspace/xcshareddata/WorkspaceSettings.xcsettings
+navigation_flutter_demo/ios/Runner.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+navigation_flutter_demo/ios/Runner.xcodeproj/project.xcworkspace/contents.xcworkspacedata
+navigation_flutter_demo/ios/Runner.xcodeproj/project.pbxproj
+navigation_flutter_demo/ios/Flutter/Release.xcconfig
+navigation_flutter_demo/ios/Flutter/Debug.xcconfig
+navigation_flutter_demo/ios/Flutter/AppFrameworkInfo.plist
+navigation_flutter_demo/android/gradle/wrapper/gradle-wrapper.properties
+navigation_flutter_demo/android/gradle.properties
+navigation_flutter_demo/android/app/src/main/res/mipmap-xxxhdpi/ic_launcher.png
+navigation_flutter_demo/android/app/src/main/res/mipmap-xxhdpi/ic_launcher.png
+navigation_flutter_demo/android/app/src/main/res/mipmap-xhdpi/ic_launcher.png
+navigation_flutter_demo/android/app/src/main/res/mipmap-mdpi/ic_launcher.png
+navigation_flutter_demo/android/app/src/main/res/mipmap-hdpi/ic_launcher.png
+navigation_flutter_demo/android/app/src/main/kotlin/com/example/navigation_flutter_demo/MainActivity.kt
+navigation_flutter_demo/analysis_options.yaml
+navigation_flutter_demo/.metadata
