--- a/.gitignore
+++ b/.gitignore
@@ -802,3 +802,110 @@ navigation_flutter_demo/android/app/src/main/res/mipmap-hdpi/ic_launcher.png
 navigation_flutter_demo/android/app/src/main/kotlin/com/example/navigation_flutter_demo/MainActivity.kt
 navigation_flutter_demo/analysis_options.yaml
 navigation_flutter_demo/.metadata
+clima_flutter/.metadata
+clima_flutter/analysis_options.yaml
+clima_flutter/android/app/src/main/kotlin/com/example/clima_flutter/MainActivity.kt
+clima_flutter/android/app/src/main/res/mipmap-hdpi/ic_launcher.png
+clima_flutter/android/app/src/main/res/mipmap-mdpi/ic_launcher.png
+clima_flutter/android/app/src/main/res/mipmap-xhdpi/ic_launcher.png
+clima_flutter/android/app/src/main/res/mipmap-xxhdpi/ic_launcher.png
+clima_flutter/android/app/src/main/res/mipmap-xxxhdpi/ic_launcher.png
+clima_flutter/android/gradle.properties
+clima_flutter/android/gradle/wrapper/gradle-wrapper.properties
+clima_flutter/fonts/SpartanMB-Black.otf
+clima_flutter/ios/Flutter/AppFrameworkInfo.plist
+clima_flutter/ios/Flutter/Debug.xcconfig
+clima_flutter/ios/Flutter/Release.xcconfig
+clima_flutter/ios/Runner.xcodeproj/project.pbxproj
+clima_flutter/ios/Runner.xcodeproj/project.xcworkspace/contents.xcworkspacedata
+clima_flutter/ios/Runner.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+clima_flutter/ios/Runner.xcodeproj/project.xcworkspace/xcshareddata/WorkspaceSettings.xcsettings
+clima_flutter/ios/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
+clima_flutter/ios/Runner.xcworkspace/contents.xcworkspacedata
+clima_flutter/ios/Runner.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+clima_flutter/ios/Runner.xcworkspace/xcshareddata/WorkspaceSettings.xcsettings
+clima_flutter/ios/Runner/AppDelegate.swift
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Contents.json
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-1024x1024@1x.png
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-20x20@1x.png
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-20x20@2x.png
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-20x20@3x.png
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-29x29@1x.png
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-29x29@2x.png
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-29x29@3x.png
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-40x40@1x.png
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-40x40@2x.png
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-40x40@3x.png
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-60x60@2x.png
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-60x60@3x.png
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-76x76@1x.png
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-76x76@2x.png
+clima_flutter/ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-83.5x83.5@2x.png
+clima_flutter/ios/Runner/Assets.xcassets/LaunchImage.imageset/Contents.json
+clima_flutter/ios/Runner/Assets.xcassets/LaunchImage.imageset/LaunchImage.png
+clima_flutter/ios/Runner/Assets.xcassets/LaunchImage.imageset/LaunchImage@2x.png
+clima_flutter/ios/Runner/Assets.xcassets/LaunchImage.imageset/LaunchImage@3x.png
+clima_flutter/ios/Runner/Assets.xcassets/LaunchImage.imageset/README.md
+clima_flutter/ios/Runner/Base.lproj/LaunchScreen.storyboard
+clima_flutter/ios/Runner/Base.lproj/Main.storyboard
+clima_flutter/ios/Runner/Info.plist
+clima_flutter/ios/Runner/Runner-Bridging-Header.h
+clima_flutter/lib/screens/location_screen.dart
+clima_flutter/linux/CMakeLists.txt
+clima_flutter/linux/flutter/CMakeLists.txt
+clima_flutter/linux/flutter/generated_plugin_registrant.cc
+clima_flutter/linux/flutter/generated_plugin_registrant.h
+clima_flutter/linux/flutter/generated_plugins.cmake
+clima_flutter/linux/main.cc
+clima_flutter/linux/my_application.cc
+clima_flutter/linux/my_application.h
+clima_flutter/macos/Flutter/Flutter-Debug.xcconfig
+clima_flutter/macos/Flutter/Flutter-Release.xcconfig
+clima_flutter/macos/Flutter/GeneratedPluginRegistrant.swift
+clima_flutter/macos/Runner.xcodeproj/project.pbxproj
+clima_flutter/macos/Runner.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+clima_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
+clima_flutter/macos/Runner.xcworkspace/contents.xcworkspacedata
+clima_flutter/macos/Runner.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+clima_flutter/macos/Runner/AppDelegate.swift
+clima_flutter/macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_1024.png
+clima_flutter/macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_128.png
+clima_flutter/macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_16.png
+clima_flutter/macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_256.png
+clima_flutter/macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_32.png
+clima_flutter/macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_512.png
+clima_flutter/macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_64.png
+clima_flutter/macos/Runner/Assets.xcassets/AppIcon.appiconset/Contents.json
+clima_flutter/macos/Runner/Base.lproj/MainMenu.xib
+clima_flutter/macos/Runner/Configs/AppInfo.xcconfig
+clima_flutter/macos/Runner/Configs/Debug.xcconfig
+clima_flutter/macos/Runner/Configs/Release.xcconfig
+clima_flutter/macos/Runner/Configs/Warnings.xcconfig
+clima_flutter/macos/Runner/DebugProfile.entitlements
+clima_flutter/macos/Runner/Info.plist
+clima_flutter/macos/Runner/MainFlutterWindow.swift
+clima_flutter/macos/Runner/Release.entitlements
+clima_flutter/web/favicon.png
+clima_flutter/web/icons/Icon-192.png
+clima_flutter/web/icons/Icon-512.png
+clima_flutter/web/icons/Icon-maskable-192.png
+clima_flutter/web/icons/Icon-maskable-512.png
+clima_flutter/web/index.html
+clima_flutter/web/manifest.json
+clima_flutter/windows/CMakeLists.txt
+clima_flutter/windows/flutter/CMakeLists.txt
+clima_flutter/windows/flutter/generated_plugin_registrant.cc
+clima_flutter/windows/flutter/generated_plugin_registrant.h
+clima_flutter/windows/flutter/generated_plugins.cmake
+clima_flutter/windows/runner/CMakeLists.txt
+clima_flutter/windows/runner/flutter_window.cpp
+clima_flutter/windows/runner/flutter_window.h
+clima_flutter/windows/runner/main.cpp
+clima_flutter/windows/runner/resource.h
+clima_flutter/windows/runner/resources/app_icon.ico
+clima_flutter/windows/runner/runner.exe.manifest
+clima_flutter/windows/runner/Runner.rc
+clima_flutter/windows/runner/utils.cpp
+clima_flutter/windows/runner/utils.h
+clima_flutter/windows/runner/win32_window.cpp
+clima_flutter/windows/runner/win32_window.h
